--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
     <button class="js-button">Добавить расход</button>
 
     <input class="input-limit" type="number" placeholder="Изменить лимит">
+ 
     <button class="limit-btn">Добавить</button>
+    <div>
+      <p>Категория расхода: <input type="text" placeholder="Введите на что потратили" class="select"></p>
+    </div>
     <p>Limit: <span class="js-limit">0</span>$</p>
+
+    
 
     <p>Sum: <span class="js-sum">0</span></p>
     <p>Balance: <span class="js-balance">10000</span></p>
@@ -23,6 +29,7 @@
     <h2>History:</h2>
     <div class="js-history history"></div>
 </div>
+
 
 <script src="index.js"></script>
 </body>
