--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div>
       <p>Категория расхода: <input type="text" placeholder="Введите на что потратили" class="select"></p>
     </div>
-    <p>Лимит <span class="js-limit">0</span>$</p>
+    <p>Лимит: <span class="js-limit">0</span>P</p>
 
     
 
