--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     <div class="js-history history"></div>
 </div>
 
+    <div class="refresh-container">
+    <button class="refresh-btn">Обновить приложение</button>
+</div>
+
 
 <script src="index.js"></script>
 </body>
