--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
   <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.jpeg" type="image/x-icon">
+<link rel="icon" href="favicon.jpeg" type="image/x-icon">
+  <link rel="apple-touch-jpeg" href="icon.png">
+  <link rel="apple-touch-jpeg" sizes="152x152" href="icon-152x152.jpeg">
+  <link rel="apple-touch-jpeg" sizes="180x180" href="icon-180x180.jpeg">
+  <link rel="apple-touch-jpeg" sizes="167x167" href="icon-167x167.jpeg">
 </head>
 <body>
 <div class="container">
