--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
   <link rel="stylesheet" href="style.css">
-<link rel="icon" href="favicon.jpeg" type="image/x-icon">
-  <link rel="apple-touch-jpeg" href="icon.png">
-  <link rel="apple-touch-jpeg" sizes="152x152" href="icon-152x152.jpeg">
-  <link rel="apple-touch-jpeg" sizes="180x180" href="icon-180x180.jpeg">
-  <link rel="apple-touch-jpeg" sizes="167x167" href="icon-167x167.jpeg">
+ <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="icon-180x180.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="icon-167x167.png">
 </head>
 <body>
 <div class="container">
